# PsiDataViz

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  serve.py
.github/workflows/: ci.yml
apps/backend/: pyproject.toml
apps/backend/src/psidata_backend/: main.py  molecule.py  services.py
apps/backend/tests/: test_api.py  test_molecule.py
apps/frontend/: package-lock.json  package.json
apps/frontend/src/: App.tsx  api.ts  compound.ts  styles.css
apps/frontend/src/components/: ConnectGuide.tsx  DataWorkspace.tsx  Diagnostics.tsx  ExportMenu.tsx  Footer.tsx  Header.tsx  Heatmap.tsx  MetadataPanel.tsx  MoleculeViewer.tsx  NotebookMenu.tsx  ProviderIcon.tsx  RepoSearch.tsx  Resources.tsx  SpectrumPlot.tsx
apps/psidataviz-dash/src/psidataviz_dash/: server.py  services.py
apps/psidataviz-dash/src/psidataviz_dash/pages/: browse.py  home.py
deploy/: Caddyfile
docs/: README.md  ROADMAP.md  adding-a-reader.md  data-sources.md  deploy.md  design-sample-centric-catalog.md
src/molviz/: __init__.py
src/molviz/app/: __init__.py  __main__.py  cache.py  plotting.py  server.py  services.py
src/molviz/app/pages/: browse.py  home.py  visualize.py
src/molviz/core/: __init__.py  export.py
src/molviz/core/readers/: _tabular.py
src/molviz/sources/: base.py  catalog.py
tests/: test_app.py  test_dsc_reader.py  test_filename.py  test_ftir_raman_readers.py  test_nmr_reader.py  test_registry.py  test_sources.py
